// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupPhrase renders correctly with backup completed 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="CancelButton"
      >
        <Text
          style={
            [
              {
                "color": "#2F4ACD",
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2E3338",
                },
                {
                  "color": "#666666",
                },
              ],
            ]
          }
        >
          cancel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            {
              "color": "#2F4ACD",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
            }
          }
        >
          moreInfo
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "padding": 16,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 2,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "column",
              }
            }
          >
            <Text
              style={
                {
                  "fontFamily": "RedHatDisplayBold",
                  "fontSize": 20,
                  "lineHeight": 28,
                  "marginBottom": 16,
                }
              }
            >
              writeDownKeyExperimental
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel=""
          style={
            {
              "alignContent": "center",
              "borderColor": "#2E3338",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "center",
              "marginTop": 8,
              "padding": 8,
            }
          }
          testID="AccountKeyWordsContainer"
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="BackupPhrase/Copy"
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
              "gap": 8,
              "paddingVertical": 16,
            }
          }
        >
          <svg
            fill="none"
            height={20}
            viewBox="0 0 27 27"
            width={20}
          >
            <path
              d="M26.2938 5.42769L21.5723 0.706167C21.1154 0.249244 20.5061 0 19.8554 0H12.1154C9.24923 0 6.92308 2.32615 6.92308 5.19231V5.53846H5.19231C2.32615 5.53846 0 7.86462 0 10.7308V21.8077C0 24.6738 2.32615 27 5.19231 27H14.8846C17.7508 27 20.0769 24.6738 20.0769 21.8077V21.4615H21.8077C24.6738 21.4615 27 19.1354 27 16.2692V7.14462C27 6.5077 26.7508 5.88461 26.2938 5.42769ZM21.4615 3.53077L23.4554 5.52462H22.9292C22.1123 5.52462 21.4615 4.86001 21.4615 4.05693V3.53077ZM18 21.7939C18 23.5108 16.6015 24.9092 14.8846 24.9092H5.19231C3.47538 24.9092 2.07692 23.5108 2.07692 21.7939V10.7169C2.07692 9.00001 3.47538 7.60155 5.19231 7.60155H6.92308V16.2554C6.92308 19.1215 9.24923 21.4477 12.1154 21.4477H18V21.7939ZM21.8077 19.3708H12.1154C10.3985 19.3708 9 17.9723 9 16.2554V5.17847C9 3.46155 10.3985 2.06308 12.1154 2.06308H19.3846V4.05693C19.3846 6.00924 20.9769 7.60155 22.9292 7.60155H24.9231V16.2554C24.9231 17.9723 23.5246 19.3708 21.8077 19.3708Z"
              fill="#2F4ACD"
            />
          </svg>
          <Text
            style={
              {
                "color": "#2F4ACD",
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "lineHeight": 24,
              }
            }
          >
            copy
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "fontFamily": "RedHatDisplayRegular",
            "fontSize": 12,
            "lineHeight": 24,
            "marginTop": 16,
          }
        }
      >
        backupKeyWarning
      </Text>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`BackupPhrase renders correctly with backup not completed 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="CancelButton"
      >
        <Text
          style={
            [
              {
                "color": "#2F4ACD",
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2E3338",
                },
                {
                  "color": "#666666",
                },
              ],
            ]
          }
        >
          cancel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            {
              "color": "#2F4ACD",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
            }
          }
        >
          moreInfo
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "padding": 16,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 2,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "column",
              }
            }
          >
            <Text
              style={
                {
                  "fontFamily": "RedHatDisplayBold",
                  "fontSize": 20,
                  "lineHeight": 28,
                  "marginBottom": 16,
                }
              }
            >
              writeDownKeyExperimental
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel=""
          style={
            {
              "alignContent": "center",
              "borderColor": "#2E3338",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "center",
              "marginTop": 8,
              "padding": 8,
            }
          }
          testID="AccountKeyWordsContainer"
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="BackupPhrase/Copy"
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
              "gap": 8,
              "paddingVertical": 16,
            }
          }
        >
          <svg
            fill="none"
            height={20}
            viewBox="0 0 27 27"
            width={20}
          >
            <path
              d="M26.2938 5.42769L21.5723 0.706167C21.1154 0.249244 20.5061 0 19.8554 0H12.1154C9.24923 0 6.92308 2.32615 6.92308 5.19231V5.53846H5.19231C2.32615 5.53846 0 7.86462 0 10.7308V21.8077C0 24.6738 2.32615 27 5.19231 27H14.8846C17.7508 27 20.0769 24.6738 20.0769 21.8077V21.4615H21.8077C24.6738 21.4615 27 19.1354 27 16.2692V7.14462C27 6.5077 26.7508 5.88461 26.2938 5.42769ZM21.4615 3.53077L23.4554 5.52462H22.9292C22.1123 5.52462 21.4615 4.86001 21.4615 4.05693V3.53077ZM18 21.7939C18 23.5108 16.6015 24.9092 14.8846 24.9092H5.19231C3.47538 24.9092 2.07692 23.5108 2.07692 21.7939V10.7169C2.07692 9.00001 3.47538 7.60155 5.19231 7.60155H6.92308V16.2554C6.92308 19.1215 9.24923 21.4477 12.1154 21.4477H18V21.7939ZM21.8077 19.3708H12.1154C10.3985 19.3708 9 17.9723 9 16.2554V5.17847C9 3.46155 10.3985 2.06308 12.1154 2.06308H19.3846V4.05693C19.3846 6.00924 20.9769 7.60155 22.9292 7.60155H24.9231V16.2554C24.9231 17.9723 23.5246 19.3708 21.8077 19.3708Z"
              fill="#2F4ACD"
            />
          </svg>
          <Text
            style={
              {
                "color": "#2F4ACD",
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "lineHeight": 24,
              }
            }
          >
            copy
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "fontFamily": "RedHatDisplayRegular",
            "fontSize": 12,
            "lineHeight": 24,
            "marginTop": 16,
          }
        }
      >
        backupKeyWarning
      </Text>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 16,
        "paddingHorizontal": 16,
      }
    }
  >
    <AndroidSwitch
      accessibilityRole="switch"
      enabled={true}
      on={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="backupKeySavedSwitch"
      thumbTintColor="#E6E6E6"
      trackColorForFalse="#757575"
      trackColorForTrue="#2F4ACD"
      trackTintColor="#757575"
    />
    <Text
      onPress={[Function]}
      style={
        {
          "flex": 1,
          "fontFamily": "RedHatDisplayRegular",
          "fontSize": 12,
          "lineHeight": 24,
          "paddingLeft": 8,
        }
      }
    >
      savedConfirmation
    </Text>
  </View>
  <View
    distance={8}
    offset={
      [
        0,
        4,
      ]
    }
    startColor="rgba(190, 201, 255, 0.28)"
    style={
      {
        "alignSelf": "stretch",
        "borderRadius": 15,
      }
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "column",
            "width": "100%",
          },
          {
            "paddingBottom": 16,
            "paddingHorizontal": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "overflow": "hidden",
            },
            {
              "borderRadius": 100,
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={false}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackground",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#FFFFFF",
                "borderRadius": 100,
                "borderWidth": 1,
                "flexDirection": "row",
                "flexGrow": 1,
                "height": 48,
                "justifyContent": "center",
                "maxHeight": 56,
                "opacity": 0.5,
                "paddingHorizontal": 24,
                "paddingVertical": 5,
                "width": "100%",
              },
              undefined,
            ]
          }
          testID="backupKeyContinue"
        >
          <Text
            maxFontSizeMultiplier={1}
            style={
              {
                "color": "#2F4ACD",
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "fontWeight": "normal",
                "lineHeight": 24,
                "marginLeft": 0,
                "marginRight": 0,
              }
            }
          >
            continue
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`BackupPhrase still renders when mnemonic doesnt show up 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
          "overflow": "hidden",
          "width": "100%",
        },
        {
          "paddingHorizontal": 16,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="CancelButton"
      >
        <Text
          style={
            [
              {
                "color": "#2F4ACD",
                "fontFamily": "RedHatDisplayRegular",
                "fontSize": 12,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#2E3338",
                },
                {
                  "color": "#666666",
                },
              ],
            ]
          }
        >
          cancel
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        hitSlop={
          {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            {
              "color": "#2F4ACD",
              "fontFamily": "RedHatDisplayRegular",
              "fontSize": 12,
              "lineHeight": 24,
            }
          }
        >
          moreInfo
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "padding": 16,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 2,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "column",
              }
            }
          >
            <Text
              style={
                {
                  "fontFamily": "RedHatDisplayBold",
                  "fontSize": 20,
                  "lineHeight": 28,
                  "marginBottom": 16,
                }
              }
            >
              writeDownKeyExperimental
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel=""
          style={
            {
              "alignContent": "center",
              "borderColor": "#2E3338",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "center",
              "marginTop": 8,
              "padding": 8,
            }
          }
          testID="AccountKeyWordsContainer"
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="BackupPhrase/Copy"
      >
        <View
          style={
            {
              "alignItems": "center",
              "alignSelf": "center",
              "flexDirection": "row",
              "gap": 8,
              "paddingVertical": 16,
            }
          }
        >
          <svg
            fill="none"
            height={20}
            viewBox="0 0 27 27"
            width={20}
          >
            <path
              d="M26.2938 5.42769L21.5723 0.706167C21.1154 0.249244 20.5061 0 19.8554 0H12.1154C9.24923 0 6.92308 2.32615 6.92308 5.19231V5.53846H5.19231C2.32615 5.53846 0 7.86462 0 10.7308V21.8077C0 24.6738 2.32615 27 5.19231 27H14.8846C17.7508 27 20.0769 24.6738 20.0769 21.8077V21.4615H21.8077C24.6738 21.4615 27 19.1354 27 16.2692V7.14462C27 6.5077 26.7508 5.88461 26.2938 5.42769ZM21.4615 3.53077L23.4554 5.52462H22.9292C22.1123 5.52462 21.4615 4.86001 21.4615 4.05693V3.53077ZM18 21.7939C18 23.5108 16.6015 24.9092 14.8846 24.9092H5.19231C3.47538 24.9092 2.07692 23.5108 2.07692 21.7939V10.7169C2.07692 9.00001 3.47538 7.60155 5.19231 7.60155H6.92308V16.2554C6.92308 19.1215 9.24923 21.4477 12.1154 21.4477H18V21.7939ZM21.8077 19.3708H12.1154C10.3985 19.3708 9 17.9723 9 16.2554V5.17847C9 3.46155 10.3985 2.06308 12.1154 2.06308H19.3846V4.05693C19.3846 6.00924 20.9769 7.60155 22.9292 7.60155H24.9231V16.2554C24.9231 17.9723 23.5246 19.3708 21.8077 19.3708Z"
              fill="#2F4ACD"
            />
          </svg>
          <Text
            style={
              {
                "color": "#2F4ACD",
                "fontFamily": "RedHatDisplaySemiBold",
                "fontSize": 12,
                "lineHeight": 24,
              }
            }
          >
            copy
          </Text>
        </View>
      </View>
      <Text
        style={
          {
            "fontFamily": "RedHatDisplayRegular",
            "fontSize": 12,
            "lineHeight": 24,
            "marginTop": 16,
          }
        }
      >
        backupKeyWarning
      </Text>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
